<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activity.MainActivity">
    <!--    tools:layout_marginTop="-750dp">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/app_bar" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <TextView
                android:id="@+id/tv_bed_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="20dp"
                android:text="@string/tv_quarto1_suite"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/sw_ar_bed_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_ar_condicionado"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_bed_1"
                app:layout_constraintTop_toBottomOf="@+id/tv_bed_1" />

            <Switch
                android:id="@+id/sw_lamp_cls_bed_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tv_lamp_closet"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/sw_lamp_bed_1"
                app:layout_constraintTop_toBottomOf="@+id/sw_lamp_bed_1" />

            <Switch
                android:id="@+id/sw_lamp_wc_bed_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tv_lamp_wc"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/sw_lamp_cls_bed_1"
                app:layout_constraintTop_toBottomOf="@+id/sw_lamp_cls_bed_1" />

            <Switch
                android:id="@+id/sw_lamp_bed_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tv_lamp_quarto"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/sw_ar_bed_1"
                app:layout_constraintTop_toBottomOf="@+id/sw_ar_bed_1" />


            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@+id/sw_lamp_wc_bed_1" />

            <TextView
                android:id="@+id/tv_bed_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tv_bed_2"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/sw_lamp_wc_bed_1"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <Switch
                android:id="@+id/sw_ar_bed_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_ar_condicionado"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_bed_2"
                app:layout_constraintTop_toBottomOf="@+id/tv_bed_2" />

            <Switch
                android:id="@+id/sw_lamp_bed_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tv_lamp_quarto"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/sw_ar_bed_2"
                app:layout_constraintTop_toBottomOf="@+id/sw_ar_bed_2" />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sw_lamp_bed_2"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_bed_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tv_quarto_3"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/sw_lamp_bed_2"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

            <Switch
                android:id="@+id/sw_ar_bed_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_ar_condicionado"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_bed_3"
                app:layout_constraintTop_toBottomOf="@+id/tv_bed_3" />

            <Switch
                android:id="@+id/sw_lamp_bed_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tv_lamp_quarto"
                app:layout_constraintStart_toStartOf="@+id/sw_ar_bed_3"
                app:layout_constraintTop_toBottomOf="@+id/sw_ar_bed_3" />

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sw_lamp_bed_3"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_corredor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tv_corredor"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/sw_lamp_bed_3"
                app:layout_constraintTop_toBottomOf="@+id/view4" />

            <Switch
                android:id="@+id/sw_lamp_bath_cor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_lamp_bath_cor"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_corredor"
                app:layout_constraintTop_toBottomOf="@+id/tv_corredor" />

            <Switch
                android:id="@+id/sw_lamp_cor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tv_lamp_corredor"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/sw_lamp_bath_cor"
                app:layout_constraintTop_toBottomOf="@+id/sw_lamp_bath_cor"
                app:layout_constraintVertical_bias="0.0" />

            <View
                android:id="@+id/view6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sw_lamp_cor" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tv_cozinha"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/sw_lamp_cor"
                app:layout_constraintTop_toBottomOf="@+id/view6"
                app:layout_constraintVertical_bias="0.0" />

            <Switch
                android:id="@+id/sw_lamp_kit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_lamp_cozinha"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <Switch
                android:id="@+id/sw_lamp_laundry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tv_lamp_laundry"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/sw_lamp_kit"
                app:layout_constraintTop_toBottomOf="@+id/sw_lamp_kit" />

            <View
                android:id="@+id/view7"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sw_lamp_laundry" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tv_garage"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/sw_lamp_laundry"
                app:layout_constraintTop_toBottomOf="@+id/view7" />

            <Switch
                android:id="@+id/sw_gate_garage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_gate_garage"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <Switch
                android:id="@+id/sw_lamp_garage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tv_lamp_garage"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/sw_gate_garage"
                app:layout_constraintTop_toBottomOf="@+id/sw_gate_garage" />

            <View
                android:id="@+id/view9"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sw_lamp_garage" />

            <TextView
                android:id="@+id/tv_living"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tv_living"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/sw_lamp_garage"
                app:layout_constraintTop_toBottomOf="@+id/view9" />

            <Switch
                android:id="@+id/sw_lamp_hall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_lamp_hall"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_living"
                app:layout_constraintTop_toBottomOf="@+id/tv_living" />

            <Switch
                android:id="@+id/sw_lamp_dining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tv_lamp_dining"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/sw_lamp_hall"
                app:layout_constraintTop_toBottomOf="@+id/sw_lamp_hall" />

            <Switch
                android:id="@+id/sw_lamp_living"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tv_lamp_living"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/sw_lamp_dining"
                app:layout_constraintTop_toBottomOf="@+id/sw_lamp_dining" />

            <View
                android:id="@+id/view10"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sw_lamp_living" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tv_varanda"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/sw_lamp_living"
                app:layout_constraintTop_toBottomOf="@+id/view10" />

            <Switch
                android:id="@+id/sw_lamp_balc_hall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_lamp_balc_hall"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <Switch
                android:id="@+id/sw_lamp_balc_liv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="50dp"
                android:text="@string/tv_lamp_balc_living"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/sw_lamp_balc_hall"
                app:layout_constraintTop_toBottomOf="@+id/sw_lamp_balc_hall"
                app:layout_constraintVertical_bias="0.0" />

            <Switch
                android:id="@+id/sw_lamp_balc_laundry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tv_lamp_balc_laundry"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/sw_lamp_balc_liv"
                app:layout_constraintTop_toBottomOf="@+id/sw_lamp_balc_liv" />

            <View
                android:id="@+id/view11"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sw_lamp_balc_laundry" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/tv_desenvolvedor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view11"
                app:layout_constraintVertical_bias="0.0" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</ScrollView>