<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--    <TextView-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_centerInParent="true"-->
<!--    android:text="@string/aba_1"-->
<!--    android:textSize="36sp" />-->

    <TextView
        android:id="@+id/tv_bed_1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="93dp"
        android:layout_marginRight="93dp"
        android:text="@string/tv_quarto1_suite"
        android:textSize="24sp" />

    <Switch
        android:id="@+id/sw_ar_bed_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_bed_1"
        android:layout_alignStart="@+id/tv_bed_1"
        android:layout_alignLeft="@+id/tv_bed_1"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/tv_ar_condicionado"
        android:textSize="16sp" />

    <Switch
        android:id="@+id/sw_lamp_bed_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_bed_1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:text="@string/tv_lamp_quarto"
        android:textSize="16sp" />

    <Switch
        android:id="@+id/sw_lamp_cls_bed_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sw_ar_bed_1"
        android:layout_alignStart="@+id/sw_ar_bed_1"
        android:layout_alignLeft="@+id/sw_ar_bed_1"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="15dp"
        android:text="@string/tv_lamp_closet"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/sw_lamp_wc_bed_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sw_lamp_bed_1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:text="@string/tv_lamp_wc"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/sw_lamp_wc_bed_1"
        android:layout_marginTop="20dp"
        android:background="@android:color/darker_gray" />
</RelativeLayout>
